--- a/taak2.html
+++ b/taak2.html
@@ -21,7 +21,7 @@
                             <div class="navbar-logo">
                                 <div class="navbar-brand mx-auto">
                                     <a href="./taak2.html">
-                                        <img src="./git-pe-2-BorleonePXL/assets/riot-games-logo.svg">
+                                        <img src="./assets/riot-games-logo.svg">
                                     </a>
                                 </div>
                             </div>
