NAV-04 Rechtse deel

--- a/taak2.html
+++ b/taak2.html
@@ -20,9 +20,9 @@
                 <div class="header">
                     <div class="row align-items-center">
                         <!-- First column: Logo -->
-                        <div class="col-md-3 d-flex align-items-center">
+                        <div class="col-md-3 d-flex align-items-center" id="logo">
                             <a href="./taak2.html" class="navbar-brand mx-auto">
-                                <img src="./assets/riot-games-logo.svg" alt="Riot Games Logo" style="max-width: 100px;">
+                                <img src="./assets/riot-games-logo.svg" alt="Riot Games Logo">
                             </a>
                         </div>
 
